--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lvl1-1": "ts-node src/1/part-1/index.ts",
-    "lvl1-2": "ts-node src/1/part-2/index.ts"
+    "lvl1-2": "ts-node src/1/part-2/index.ts",
+    "lvl2-1": "ts-node src/2/index.ts"
   },
   "author": "",
   "license": "ISC"
