--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lvl1-1": "ts-node src/1/part-1/index.ts",
     "lvl1-2": "ts-node src/1/part-2/index.ts",
-    "lvl2": "ts-node src/2/index.ts"
+    "lvl2": "ts-node src/2/index.ts",
+    "lvl3": "ts-node src/3/index.ts",
+    "lvl4": "ts-node src/4/index.ts",
+    "lvl5": "ts-node src/5/index.ts",
+    "lvl6": "ts-node src/6/index.ts",
+    "lvl7": "ts-node src/7/index.ts",
+    "lvl8": "ts-node src/8/index.ts",
+    "lvl9": "ts-node src/9/index.ts"
   },
   "author": "",
   "license": "ISC"
